Fix changed-flag in OntologyCompilerFinishedEvent